deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: pgview-web
  name: pgview-web
spec:
  selector:
    application: pgview-web
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
